# ros2-autonomous-chess-robot

./: LICENSE  README.md
src/chess_bringup/: CMakeLists.txt  package.xml
src/chess_bringup/launch/: brain.launch.py  master.launch.py  robot.launch.py
src/chess_engine_bridge/: package.xml  setup.cfg  setup.py
src/chess_engine_bridge/chess_engine_bridge/: detected_moves_engine_node.py
src/chess_mapper_state/: package.xml  setup.cfg  setup.py
src/chess_mapper_state/chess_mapper_state/: mapper_state_node.py  old_code
src/chess_mapper_state/chess_mapper_state/install/: local_setup.sh  setup.sh
src/chess_vision_pkg/: package.xml  setup.py
src/chess_vision_pkg/calibration_data/: camera_calibration.npz
src/chess_vision_pkg/chess_vision_pkg/: calibrate_homography.py  vision_node.py  vision_node11111111111.py
src/ur5e_grip_run/ur5e_grip_run/: joint_commander.py
src/ur5e_grip_run_cpp/: CMakeLists.txt  package.xml
src/ur5e_grip_run_cpp/config/: chess_commander.yaml
src/ur5e_grip_run_cpp/include/ur5e_grip_run_cpp/: bezier_utils.hpp  chess_utils.hpp
src/ur5e_grip_run_cpp/launch/: ik_commander.launch.py
src/ur5e_grip_run_cpp/src/: joint_commander_ik.cpp
