<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5e_grip_run_cpp</name>
  <version>0.0.0</version>
  <description>Move UR5e with MoveIt and control Robotiq gripper for chess pick-and-place.</description>
  <maintainer email="moaz@todo.todo">moaz</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>robotiq_2f_urcap_adapter</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>